--- a/web/css/style.css
+++ b/web/css/style.css
@@ -38,3 +38,24 @@ div[role="main"], nav, aside {
     text-align: center;
     height: 615px;
 }
+
+.wrapper {
+  height: 100%;
+  min-height: 100%;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+
+.wrapper div {
+  padding: 13px;
+}
+
+.linha-vertical {
+  height: 50px;
+  border-left: 2px solid;
+  color: #f5f5f5;
+}
